--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,38 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar color="primary">
+    <button ion-button icon-only clear>
+      <ion-icon name="menu" color="light"></ion-icon>
+      <ion-title>
+          Azia
+      </ion-title>
+    </button>
+    <ion-buttons end>
+      <button ion-button>
+        <p>Kossy &nbsp;&nbsp;</p>
+        <ion-icon name="arrow-down" md="ios-arrow-down"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class="app-background-colour">
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col-2>
+
+        <ion-list>
+          <button [ngClass]="getSelectionColour(label.id)" ion-item no-lines *ngFor="let label of labelList; let i = index" (click)="onLabelSelected(i)">
+            <ion-icon color="primary" name="apps" item-left></ion-icon>
+            <p>{{ label.name }}</p>
+          </button>
+        </ion-list>
+
+      </ion-col>
+      <ion-col col-10>
+        <ion-nav [root]="jPage" swipeBackEnabled="false"></ion-nav>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
