--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="primary">
     <button ion-button icon-only clear>
-      <ion-icon name="menu" color="light"></ion-icon>
+      <ion-icon name="list" color="light"></ion-icon>
       <ion-title>
           Azia
       </ion-title>
