--- a/src/pages/journal/journal.html
+++ b/src/pages/journal/journal.html
@@ -4,7 +4,7 @@
     <p style="margin-left: 50px;">{{ item.title }}</p>
 
     <div style="box-shadow: 0px 3px 3px #ccd;">
-      <button ion-item no-lines *ngFor="let journal of item.journalList" (click)="onViewJournal(journal.id)">
+      <button ion-item no-lines *ngFor="let journal of item.journalList" (click)="onViewJournal(journal)">
 
         <div class="journal-img-body" item-start>
           <p class="journal-img-content">{{ extractFirstLetter(journal.title) }}</p>
