--- a/src/pages/journal/create/journal-create.html
+++ b/src/pages/journal/create/journal-create.html
@@ -22,7 +22,7 @@
       <div class="bounce2" [ngClass]="{hide: !isSaving}"></div>
       <div class="bounce3" [ngClass]="{hide: !isSaving}"></div>
 
-      <span [ngClass]="{hide: isSaving}">{{ saveStatus }}</span>
+      <span [ngClass]="{hide: isSaving}"><em>{{ saveStatus }}</em></span>
     </div>
 
     <b>
